# civ-sim

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.py  main.py  pyproject.toml  replay.py  requirements.txt
agents/: city.py  civilization.py  decisions.py
agents/providers/: __init__.py  anthropic_provider.py  base.py  council_ministers.py  council_prompts.py  council_provider.py  factory.py  openai_compat.py
examples/: council_dgx.yaml  council_nano.yaml
scripts/: setup_llm.sh  start_vllm_council.sh  start_vllm_nano.sh  test_council_calls.py  tmux-session.sh  tmux-status.sh
simulation/: model.py  runner.py
src/civ_sim/: __main__.py  config.py  replay.py
src/civ_sim/agents/: city.py  civilization.py  decisions.py
src/civ_sim/agents/providers/: __init__.py  anthropic_provider.py  base.py  council_ministers.py  council_prompts.py  council_provider.py  factory.py  openai_compat.py  prompt.py  rule_based.py
src/civ_sim/simulation/: model.py  runner.py
src/civ_sim/storage/: logger.py  snapshot.py
src/civ_sim/technology/: discovery.py
src/civ_sim/visualization/: renderer.py  terminal_renderer.py
src/civ_sim/world/: events.py  grid.py
storage/: logger.py  snapshot.py
tests/: conftest.py  test_batched_provider.py  test_city_actions.py  test_city_lifecycle.py  test_civilization.py  test_council_integration.py  test_decisions.py  test_dynamism.py  test_events.py  test_factory.py  test_grid.py  test_grid_backend.py  test_labor_economy.py  test_logger.py  test_model_dispatch.py  test_model_integration.py  test_relations.py  test_replay_helpers.py  test_replay_matplotlib.py  test_replay_renderer_compat.py  test_rich_map.py  test_snapshot_config.py  test_snapshot_reader.py  test_snapshot_types.py  test_snapshot_writer.py  test_sweep_runner.py  test_tech_engine.py  test_terminal_renderer.py
tests/providers/: test_anthropic_provider.py  test_council_ministers.py  test_council_prompts.py  test_council_provider.py  test_factory.py  test_openai_compat.py  test_prompt.py  test_rule_based.py
tests/snapshot/: test_snapshot_config.py  test_snapshot_integration.py  test_snapshot_reader.py  test_snapshot_types.py  test_snapshot_writer.py
visualization/: renderer.py  terminal_renderer.py
world/: events.py  grid.py  resources.py
