[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "civ-sim"
version = "0.1.0"
description = "Agent-based civilization simulator with swappable LLM/rule-based decision backends"
requires-python = ">=3.12"
dependencies = [
    "mesa>=3.5",
    "numpy>=1.26",
    "duckdb>=0.10",
    "opensimplex>=0.4",
    "openai>=1.0",
    "anthropic>=0.25",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
sweep = ["ray>=2.9"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
all = ["civ-sim[viz,sweep,dev]"]

[project.scripts]
civ-sim = "main:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", ".venv*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["."]
omit = [
    ".venv/*",
    "tests/*",
    "visualization/renderer.py",
    "simulation/runner.py",
    "main.py",
    "docs/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
